--- a/.github/workflows/dogs.yml
+++ b/.github/workflows/dogs.yml
@@ -1,4 +1,12 @@
-- name: Doggoes as an Action
-  uses: stanleynguyen/action-dogs@v1
-  with:
-    github-token: ${{ secrets.GITHUB_TOKEN }}
+name: Dogs
+
+on: [pull_request]
+
+jobs:
+  dogs:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Doggoes as an Action
+      uses: stanleynguyen/action-dogs@v1
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
