--- a/.github/workflows/dogs.yml
+++ b/.github/workflows/dogs.yml
@@ -1,4 +1,4 @@
 - name: Doggoes as an Action
   uses: stanleynguyen/action-dogs@v1
   with:
-    github-token: ${{ secrets.GITHUB_TOKEN 
+    github-token: ${{ secrets.GITHUB_TOKEN }}
